--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                         <label>Repetir contraseña</label>
                     </div>
                     <a href='materias.html'>
-                      <button type="button" class="button buttonBlue">Confirmar
+                      <button type="button" class="button buttonBlue">Continuar
                        </button>  
                     </a>
-                    <a href="login.html">Iniciar Sesión</a>
+                    <a href="login.html">Completar más tarde</a>
                 </form>
             </div>
         </div>
