--- a/estadisticas.html
+++ b/estadisticas.html
@@ -8,13 +8,14 @@
     <link type="text/css" rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <title>Mis estadisticas</title>
+
 </head>
 
 <body>
-    <script src="./script.js" type="text/javascript"></script>
     <div class='appSection'>
         <header class="header-estadisticas">
             <div class="info-ppl">
@@ -33,46 +34,39 @@
             <div class="title-objetivos">
                 <h3>Tus objetivos</h3>
                 <!--Tab y contenido de las tab de estadisticas-->
-                <ul class="tab-widget__list">
-                    <li class="tab-widget__item">
-                        <a href="#tab-panel-1" class="tab-widget__link">Anual</a>
-                    </li>
-                    <li class="tab-widget__item">
-                        <a href="#tab-panel-2" class="tab-widget__link">Mensual</a>
-                    </li>
-                    <li class="tab-widget__item">
-                        <a href="#tab-panel-3" class="tab-widget__link">Semanal</a>
-                    </li>
-                </ul>
+                <div class=tl_container>
 
-                <div class="tab-widget__tabs">
+                    <!-- A plain set of anchor links in HTML -->
 
-                    <div class="tab-widget__tab-content">
-                        <h2 id="tab-panel-1" tabindex="-1">Viaje vacaciones</h2>
-                        <p>Completaste el 70%</p>
-                        <h4>Período</h4>
-                        <p>11 meses, 17días</p>
+                    <ul class="tl_list">
+                        <li><a href="#A" class="a ON">Anual</a></li>
+                        <li><a href="#B" class=b>Mensual</a></li>
+                        <li><a href="#C" class=c>Diario</a></li>
+                    </ul>
 
-                    </div>
+                    <section id=A class="tl_section a">
+                        <div>
+                            <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto">
+                            </div>
+                    </section>
 
-                    <div class="tab-widget__tab-content">
-                        <h2 id="tab-panel-2" tabindex="-1">Tab Panel 2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et euismod elit. Nulla a
-                            elementum urna. Suspendisse viverra vehicula nulla.</p>
-                    </div>
+                    <section id=B class="tl_section b">
+                        <h2>Content heading B</h2>
+                        <p>Copy with an <a href="#">Example focusable link</a> as content for B1.</p>
+                        <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto">
+                        </div>
+                    </section>
 
-                    <div class="tab-widget__tab-content">
-                        <h2 id="tab-panel-3" tabindex="-1">Tab Panel 3</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et euismod elit. Nulla a
-                            elementum urna. Suspendisse viverra vehicula nulla.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et euismod elit. <A
-                                href="#">Nulla a elementum urna</a>. Suspendisse viverra vehicula nulla.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et euismod elit. Nulla a
-                            elementum urna. Suspendisse viverra vehicula nulla.</p>
-                    </div>
+                    <section id=C class="tl_section c">
+                        <h2>Content heading C</h2>
+                        <p>Copy without a focusable link as content for C1.</p>
+                    </section>
+
                 </div>
+            </div>
         </main>
     </div>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
