--- a/estadisticas.html
+++ b/estadisticas.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <title>Mis estadisticas</title>
@@ -46,7 +48,7 @@
 
                     <section id=A class="tl_section a">
                         <div>
-                            <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto">
+                            <div id="container"></div>
                             </div>
                     </section>
 
