--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             <div>
                 <div class="noti"><img alt="Notificaciones" src="img/notif.svg"></div>
                 <div id="Name">
-                    <h1>Hola Nahuel <img alt=" " src="img/smile.svg"></h1>
+                    <h1>Hola, Nahuel <img alt=" " src="img/smile.svg"></h1>
                 </div>
                 <div class="saldo">
                     <div>
