--- a/estadisticas.html
+++ b/estadisticas.html
@@ -49,28 +49,92 @@
                     <ul class="tl_list">
                         <li><a href="#A" class="a ON">Anual</a></li>
                         <li><a href="#B" class=b>Mensual</a></li>
-                        <li><a href="#C" class=c>Diario</a></li>
+                        <li><a href="#C" class=c>Semanal</a></li>
                     </ul>
 
                     <section id=A class="tl_section a">
                         <div>
+                            <h3>Viaje vacacional</h3>
+                            <p>Completaste el 70%</p>
                             <div id="container"></div>
-                        </div>
-                        <div>
+                            <div class="resumen">
+                                <div>
+                                    <p class="minitext">Objetivo</p>
+                                    <h3 class="money">$600.000</h3>
+                                </div>
+                                <div>
                             <div id="container-pie"></div>
                         </div>
                     </section>
 
                     <section id=B class="tl_section b">
-                        <h2>Content heading B</h2>
-                        <p>Copy with an <a href="#">Example focusable link</a> as content for B1.</p>
-                        <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto">
+                        <div>
+                            <h3>Viaje vacacional</h3>
+                            <p>Completaste el 70%</p>
+                            <div id="container_b"></div>
+                            <div class="resumen">
+                                <div>
+                                    <p class="minitext">Objetivo</p>
+                                    <h3 class="money">$20.000</h3>
+                                </div>
+                                <div>
+                                    <p class="minitext">Logrado</p>
+                                    <h3 class="money">$12.000</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="consolidado">
+                            <div>
+                                <h3>Consolidado</h3>
+                                <p>Período: 25 días</p>
+                                <div class="resumen-pie">
+                                    <div>
+                                        <p class="minitext">Ahorro</p>
+                                        <h3 class="money">$12.000</h3>
+                                    </div>
+                                    <div>
+                                        <p class="minitext">Falto</p>
+                                        <h3 class="money">$8.000</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="container-pie_b"></div>
                         </div>
                     </section>
 
                     <section id=C class="tl_section c">
-                        <h2>Content heading C</h2>
-                        <p>Copy without a focusable link as content for C1.</p>
+                        <div>
+                            <h3>Viaje vacacional</h3>
+                            <p>Completaste el 45%</p>
+                            <div id="container_c"></div>
+                            <div class="resumen">
+                                <div>
+                                    <p class="minitext">Objetivo</p>
+                                    <h3 class="money">$5.000</h3>
+                                </div>
+                                <div>
+                                    <p class="minitext">Logrado</p>
+                                    <h3 class="money">$2.000</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="consolidado">
+                            <div>
+                                <h3>Consolidado</h3>
+                                <p>Período: 25 días</p>
+                                <div class="resumen-pie">
+                                    <div>
+                                        <p class="minitext">Ahorro</p>
+                                        <h3 class="money">$2.000</h3>
+                                    </div>
+                                    <div>
+                                        <p class="minitext">Faltan</p>
+                                        <h3 class="money">$3.000</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="container-pie_c"></div>
+                        </div>
                     </section>
 
                 </div>
