--- a/estadisticas.html
+++ b/estadisticas.html
@@ -63,6 +63,26 @@
                                     <h3 class="money">$600.000</h3>
                                 </div>
                                 <div>
+                                    <p class="minitext">Logrado</p>
+                                    <h3 class="money">$422.000</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="consolidado">
+                            <div>
+                                <h3>Consolidado</h3>
+                                <p>Período: 11 meses, 17 días</p>
+                                <div class="resumen-pie">
+                                    <div>
+                                        <p class="minitext">Ahorro</p>
+                                        <h3 class="money">$422.000</h3>
+                                    </div>
+                                    <div>
+                                        <p class="minitext">Faltan</p>
+                                        <h3 class="money">$178.000</h3>
+                                    </div>
+                                </div>
+                            </div>
                             <div id="container-pie"></div>
                         </div>
                     </section>
@@ -70,7 +90,7 @@
                     <section id=B class="tl_section b">
                         <div>
                             <h3>Viaje vacacional</h3>
-                            <p>Completaste el 70%</p>
+                            <p>Completaste el 45%</p>
                             <div id="container_b"></div>
                             <div class="resumen">
                                 <div>
@@ -140,6 +160,16 @@
                 </div>
             </div>
         </main>
+        <nav>
+            <ul>
+                <li><a aria-current="page"><img alt=" " src="img/home.svg">Home</a></li>
+                <li><a href="estadisticas.html"><img alt=" " src="img/chart.svg">Análisis</a></li>
+                <li id="Agregar2"><a href=""><img alt=" " src="img/plus-circle.svg"></a></li>
+                <li><img alt=" " src="img/goals.svg">Objetivo</li>
+                <li><img alt=" " src="img/user.svg">Perfil</li>
+            </ul>
+        </nav>
+
     </div>
     <script src="script.js" type="text/javascript"></script>
 </body>
