--- a/home-modal2.html
+++ b/home-modal2.html
@@ -18,15 +18,17 @@
 <body>
     <div class='appSection'>
 
-        <img alt=" " src="img/back1.png">  
+        <img alt=" " src="img/back.png">  
 
-        <div id="Modal1">
-            <h1>¿Empezamos?<br>
-            Definamos tu objetivo</h1>
+        <div id="Modal2">
+            <div><a href="home-modal1.html"><img alt=" " src="img/+objetivo.svg"><br>Objetivo</a></div>
 
-            <p>Para poder ayudarte necesitamos que nos cuentes que estás necesitando.</p>
+            <div id="opciones">
+                <div id="ico-ingreso"><img alt=" " src="img/+ingreso.svg"><br>Ingreso</div>
+                <div><img alt=" " src="img/+gasto.svg"><br>Gasto</div>
+            </div>
 
-            <a href="objetivo-1.html"><div style="margin-top: 20px; margin-left: 50px;"><img src="img/btn_empecemos.png"></div></a>
+            <div><a href="home.html"><img alt="Cerrar" src="img/+close.svg"></a></div>
         </div>        
 
     </div>
