--- a/home-modal1.html
+++ b/home-modal1.html
@@ -18,7 +18,7 @@
 <body>
     <div class='appSection'>
 
-        <img alt=" " src="img/back1.png">  
+        <img alt="" src="img/back1.png">  
 
         <div id="Modal1">
             <h1>¿Empezamos?<br>
@@ -26,7 +26,7 @@
 
             <p>Para poder ayudarte necesitamos que nos cuentes que estás necesitando.</p>
 
-            <a href="objetivo-1.html"><div style="margin-top: 20px; margin-left: 50px;"><img src="img/btn_empecemos.png"></div></a>
+            <a href="objetivo-1.html" role="button"><div style="margin-top: 20px; margin-left: 50px;"><img src="img/btn_empecemos.png"></div></a>
         </div>        
 
     </div>
