--- a/home.html
+++ b/home.html
@@ -22,12 +22,12 @@
             <div>
                 <div class="noti"><img alt="Notificaciones" src="img/notif.svg"></div>
                 <div id="Name">
-                    <h1>Hola, Nahuel <img alt=" " src="img/smile.svg"></h1>
+                    <h1>Hola, Nahuel <img alt="" src="img/smile.svg"></h1>
                 </div>
                 <div class="saldo">
                     <div>
                         <div class="minitext">Saldo actual</div>
-                        <div class="money">$100.000</div>
+                        <div class="money"><abbr title="Peso argentino">$</abbr>100.000</div>
                     </div>
                     <div>
                         <select name="moneda" class="moneda">
@@ -53,11 +53,13 @@
             <div class='container'>
                 <h3>Tus objetivos</h3>
                 <div class="objetivo-vacio">
-                    <img alt=" " src="img/sad.svg">
+                    <img alt="" src="img/sad.svg">
                     <p>Aún no tienes objetivos cargados</p>
-                    <button><a href="home-modal1.html">
-                            <div id="Agregar1" class="CTA">Agregar</div>
-                        </a></button>
+                    <button>
+                        <a href="home-modal1.html" id="Agregar1" class="CTA">
+                            Agregar
+                        </a>
+                    </button>
                 </div>
                 <div class="chat">
                     <a href="#"><img alt="Ayuda" src="img/chat.svg"></a>
@@ -67,11 +69,11 @@
 
         <nav>
             <ul>
-                <li><a aria-current="page"><img alt=" " src="img/home.svg">Home</a></li>
-                <li><a href="estadisticas.html"><img alt=" " src="img/chart.svg">Análisis</a></li>
-                <li id="Agregar2"><a href=""><img alt=" " src="img/plus-circle.svg"></a></li>
-                <li><img alt=" " src="img/goals.svg">Objetivo</li>
-                <li><img alt=" " src="img/user.svg">Perfil</li>
+                <li><a aria-current="page"><img alt="" src="img/home.svg">Home</a></li>
+                <li><a href="estadisticas.html"><img alt="" src="img/chart.svg">Análisis</a></li>
+                <li id="Agregar2"><a href=""><img alt="" src="img/plus-circle.svg"></a></li>
+                <li><img alt="" src="img/goals.svg">Objetivo</li>
+                <li><img alt="" src="img/user.svg">Perfil</li>
             </ul>
         </nav>
 
