--- a/estadisticas.html
+++ b/estadisticas.html
@@ -162,11 +162,11 @@
         </main>
         <nav>
             <ul>
-                <li><a aria-current="page"><img alt=" " src="img/home.svg">Home</a></li>
-                <li><a href="estadisticas.html"><img alt=" " src="img/chart.svg">Análisis</a></li>
-                <li id="Agregar2"><a href=""><img alt=" " src="img/plus-circle.svg"></a></li>
-                <li><img alt=" " src="img/goals.svg">Objetivo</li>
-                <li><img alt=" " src="img/user.svg">Perfil</li>
+                <li><a href="home.html"><img alt="" src="img/home.svg">Home</a></li>
+                <li><a aria-current="page" href="estadisticas.html"><img alt="" src="img/chart.svg">Análisis</a></li>
+                <li id="Agregar2"><a href=""><img alt="" src="img/plus-circle.svg"></a></li>
+                <li><img alt="" src="img/goals.svg">Objetivo</li>
+                <li><img alt="" src="img/user.svg">Perfil</li>
             </ul>
         </nav>
 
