--- a/home-modal2.html
+++ b/home-modal2.html
@@ -18,14 +18,14 @@
 <body>
     <div class='appSection'>
 
-        <img alt=" " src="img/back.png">  
+        <img alt="" src="img/back.png">  
 
         <div id="Modal2">
-            <div><a href="home-modal1.html"><img alt=" " src="img/+objetivo.svg"><br>Objetivo</a></div>
+            <a href="home-modal1.html"><img alt="" src="img/+objetivo.svg"><br>Objetivo</a>
 
             <div id="opciones">
-                <div id="ico-ingreso"><img alt=" " src="img/+ingreso.svg"><br>Ingreso</div>
-                <div><img alt=" " src="img/+gasto.svg"><br>Gasto</div>
+                <div id="ico-ingreso"><img alt="" src="img/+ingreso.svg"><br>Ingreso</div>
+                <div><img alt="" src="img/+gasto.svg"><br>Gasto</div>
             </div>
 
             <div><a href="home.html"><img alt="Cerrar" src="img/+close.svg"></a></div>
