--- a/home.html
+++ b/home.html
@@ -55,11 +55,9 @@
                 <div class="objetivo-vacio">
                     <img alt="" src="img/sad.svg">
                     <p>Aún no tienes objetivos cargados</p>
-                    <button>
-                        <a href="home-modal1.html" id="Agregar1" class="CTA">
+                        <a href="home-modal1.html" id="Agregar1" class="CTA" role="button>
                             Agregar
                         </a>
-                    </button>
                 </div>
                 <div class="chat">
                     <a href="#"><img alt="Ayuda" src="img/chat.svg"></a>
