--- a/home-modal2.html
+++ b/home-modal2.html
@@ -21,10 +21,10 @@
         <img alt="" src="img/back.png">  
 
         <div id="Modal2">
-            <a href="home-modal1.html"><img alt="" src="img/+objetivo.svg"><br>Objetivo</a>
+            <a href="home-modal1.html"><img alt="" src="img/+objetivo.svg">Objetivo</a>
 
             <div id="opciones">
-                <div id="ico-ingreso"><img alt="" src="img/+ingreso.svg"><br>Ingreso</div>
+                <div id="ico-ingreso"><img alt="" src="img/+ingreso.svg">Ingreso</div>
                 <div><img alt="" src="img/+gasto.svg"><br>Gasto</div>
             </div>
 
