--- a/home.html
+++ b/home.html
@@ -55,12 +55,12 @@
                 <div class="objetivo-vacio">
                     <img alt="" src="img/sad.svg">
                     <p>Aún no tienes objetivos cargados</p>
-                        <a href="home-modal1.html" id="Agregar1" class="CTA" role="button>
+                    <a href="home-modal1.html" id="Agregar1" class="CTA" role="button">
                             Agregar
                         </a>
                 </div>
-                <div class="chat">
-                    <a href="#"><img alt="Ayuda" src="img/chat.svg"></a>
+                <div class= "chat">
+                        <a href="#"><img alt="Ayuda" src="img/chat.svg"></a>
                 </div>
             </div>
         </main>
