--- a/objetivo-1b.html
+++ b/objetivo-1b.html
@@ -61,10 +61,9 @@
         </main>
 
         <div class="botones">
-            <button><a href="objetivo-2.html"><div class="CTA">Continuar</div></a></button>
-            <button><a href="home.html"><div class="CTA-sec">Completar más tarde</div></a></button>
+            <a href="objetivo-2.html"><div class="CTA">Continuar</div></a>
+            <a href="home.html"><div class="CTA-sec">Completar más tarde</div></a>
         </div>
-
     </div>
 </body>
 </html>
