--- a/objetivo-2.html
+++ b/objetivo-2.html
@@ -32,7 +32,7 @@
         </main>
 
         <div class="Continuar">
-            <button><a href="objetivo-3.html"><div class="CTA">Continuar</div></a></button>            
+            <a href="objetivo-3.html"><div class="CTA">Continuar</div></a>         
         </div>
     </div>
 </body>
