--- a/objetivo-4.html
+++ b/objetivo-4.html
@@ -33,7 +33,7 @@
         </main>
 
         <div class="Continuar2">
-            <button><a href="objetivo-5.html"><div class="CTA">Continuar</div></a></button>            
+            <a href="objetivo-5.html"><div class="CTA">Continuar</div></a>            
         </div>
     </div>
 </body>
