--- a/objetivo-5.html
+++ b/objetivo-5.html
@@ -32,7 +32,7 @@
         </main>
 
         <div class="Inicio">
-            <button><a href="home2.html"><div class="CTA">Ir al Inicio</div></a></button>            
+            <a href="home2.html"><div class="CTA">Ir al Inicio</div></a>           
         </div>
     </div>
 </body>
