--- a/home.html
+++ b/home.html
@@ -27,14 +27,15 @@
                 <div class="saldo">
                     <div>
                         <div class="minitext">Saldo actual</div>
-                        <div class="money"><abbr title="Peso argentino">$</abbr>100.000</div>
+                        <div class="money">$100.000</div>
                     </div>
-                    <div>
+                    <!-- Esto queda paa evaluar si aplica
+                        <div>
                         <select name="moneda" class="moneda">
                             <option value="ARS">ARS</option>
                             <option value="USD">USD</option>
                         </select>
-                    </div>
+                    </div> -->
                 </div>
                 <div>
                     <ul class="accion" role="toolbar">
@@ -55,9 +56,8 @@
                 <div class="objetivo-vacio">
                     <img alt="" src="img/sad.svg">
                     <p>Aún no tienes objetivos cargados</p>
-                    <a href="home-modal1.html" id="Agregar1" class="CTA" role="button">
-                            Agregar
-                        </a>
+                    <form action="home-modal1.html" method="get" class="CTA"><button type="submit">Agregar objetivo</button></form>
+                
                 </div>
                 <div class= "chat">
                         <a href="#"><img alt="Ayuda" src="img/chat.svg"></a>
