arreglar boton e img decorativas

--- a/home-modal1.html
+++ b/home-modal1.html
@@ -26,7 +26,9 @@
 
             <p>Para poder ayudarte necesitamos que nos cuentes que estás necesitando.</p>
 
-            <a href="objetivo-1.html" role="button" style="margin-top: 20px; margin-left: 50px;"><img src="img/btn_empecemos.png">Comencemos</a>
+            <form action="objetivo-1.html" method="get" class="CTA">
+                <button type="submit">Comencemos</button>
+            </form>
         </div>        
 
     </div>
