--- a/home-modal2.html
+++ b/home-modal2.html
@@ -18,10 +18,12 @@
 <body>
     <div class='appSection'>
 
-        <img alt="" src="img/back.png">  
+        <img alt="" src="img/back.png">
 
         <div id="Modal2">
-            <a href="home-modal1.html"><img alt="" src="img/+objetivo.svg">Objetivo</a>
+            <form action="home-modal1.html" method="get" class="CTA">
+                <button type="submit">Agregar objetivo</button>
+            </form>
 
             <div id="opciones">
                 <div id="ico-ingreso"><img alt="" src="img/+ingreso.svg">Ingreso</div>
@@ -29,8 +31,9 @@
             </div>
 
             <div><a href="home.html"><img alt="Cerrar" src="img/+close.svg"></a></div>
-        </div>        
+        </div>
 
     </div>
 </body>
+
 </html>
