--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
                 <div class="saldo">
                     <div>
                         <div class="minitext">Saldo actual</div>
-                        <div class="money">$100.000</div>
+                        <div class="money">$0</div>
                     </div>
                     <!-- Esto queda paa evaluar si aplica
                         <div>
@@ -56,11 +56,13 @@
                 <div class="objetivo-vacio">
                     <img alt="" src="img/sad.svg">
                     <p>Aún no tienes objetivos cargados</p>
-                    <form action="home-modal1.html" method="get" class="CTA"><button type="submit">Agregar objetivo</button></form>
-                
+                    <form action="home-modal1.html" method="get" class="CTA">
+                        <button type="submit">Agregar objetivo</button>
+                    </form>
+
                 </div>
-                <div class= "chat">
-                        <a href="#"><img alt="Ayuda" src="img/chat.svg"></a>
+                <div class="chat">
+                    <a href="#"><img alt="Ayuda" src="img/chat.svg"></a>
                 </div>
             </div>
         </main>
