--- a/objetivo-1b.html
+++ b/objetivo-1b.html
@@ -61,7 +61,10 @@
         </main>
 
         <div class="botones">
-            <a href="objetivo-2.html"><div class="CTA">Continuar</div></a>
+            <form action="objetivo-2.html" method="get" class="CTA">
+                <button type="submit">Continuar</button>
+            </form>
+            
             <a href="home.html"><div class="CTA-sec">Completar más tarde</div></a>
         </div>
     </div>
