--- a/objetivo-2.html
+++ b/objetivo-2.html
@@ -32,7 +32,10 @@
         </main>
 
         <div class="Continuar">
-            <a href="objetivo-3.html"><div class="CTA">Continuar</div></a>         
+            <form action="objetivo-3.html" method="get" class="CTA">
+                <button type="submit">Continuar</button>
+            </form>
+           
         </div>
     </div>
 </body>
