--- a/objetivo-3.html
+++ b/objetivo-3.html
@@ -32,7 +32,9 @@
         </main>
 
         <div class="Continuar">
-            <a href="objetivo-4.html"><div class="CTA">Continuar</div></a>          
+            <form action="objetivo-4.html" method="get" class="CTA">
+                <button type="submit">Continuar</button>
+            </form>
         </div>
     </div>
 </body>
