--- a/objetivo-4.html
+++ b/objetivo-4.html
@@ -33,7 +33,10 @@
         </main>
 
         <div class="Continuar2">
-            <a href="objetivo-5.html"><div class="CTA">Continuar</div></a>            
+            <form action="objetivo-5.html" method="get" class="CTA">
+                <button type="submit">Continuar</button>
+            </form>
+           
         </div>
     </div>
 </body>
