--- a/objetivo-5.html
+++ b/objetivo-5.html
@@ -27,12 +27,15 @@
             <div id="final">
                 <img src="img/ilustracion.svg">
                 <h1>¡Listo! El objetivo Viaje ha sido agregado</h1>
-                <img src="img/check.svg">
+                <img alt="" src="img/check.svg">
             </div>
         </main>
 
         <div class="Inicio">
-            <a href="home2.html"><div class="CTA">Ir al Inicio</div></a>           
+            <form action="home2.html" method="get" class="CTA">
+                <button type="submit">Ir al inicio</button>
+            </form>
+               
         </div>
     </div>
 </body>
