--- a/objetivoB3.html
+++ b/objetivoB3.html
@@ -32,7 +32,9 @@
         </main>
 
         <div class="Continuar">
-            <button><a href="objetivoB4.html"><div class="CTA">Continuar</div></a></button>            
+            <form action="objetivoB4.html" method="get" class="CTA">
+                <button type="submit">Continuar</button>
+            </form>
         </div>
     </div>
 </body>
