--- a/objetivoB4.html
+++ b/objetivoB4.html
@@ -33,7 +33,9 @@
         </main>
 
         <div class="Continuar2">
-            <button><a href="objetivoB5.html"><div class="CTA">Continuar</div></a></button>            
+            <form action="objetivoB5.html" method="get" class="CTA">
+                <button type="submit">Continuar</button>
+            </form>
         </div>
     </div>
 </body>
