--- a/objetivoB5.html
+++ b/objetivoB5.html
@@ -27,13 +27,14 @@
             <div id="final">
                 <img src="img/ilustracion.svg">
                 <h1>¡Listo! El objetivo Casa ha sido agregado</h1>
-                <img src="img/check.svg">
+                <img alt="" src="img/check.svg">
             </div>
         </main>
 
         <div class="Inicio">
-            <button><a href="home3.html"><div class="CTA">Ir al Inicio</div></a></button>            
-        </div>
+            <form action="home3.html" method="get" class="CTA">
+                <button type="submit">Ir al inicio</button>
+            </form>
     </div>
 </body>
 
