--- a/objetivoB1b.html
+++ b/objetivoB1b.html
@@ -28,32 +28,32 @@
             <div class='container'>
 
                 <div class="card">
-                    <img alt=" " src="img/auto.svg">
+                    <img alt="" src="img/auto.svg">
                     <p>Vehículo</p>
                 </div>
 
                 <div class="card">
-                    <img alt=" " src="img/emprender.svg">
+                    <img alt="" src="img/emprender.svg">
                     <p>Emprender</p>
                 </div>
 
                 <div id="Select" class="card">
-                    <img alt=" " src="img/construir.svg">
+                    <img alt="" src="img/construir.svg">
                     <p>Construír/Remodelar</p>
                 </div>
 
                 <div class="card">
-                    <img alt=" " src="img/viajar.svg">
+                    <img alt="" src="img/viajar.svg">
                     <p>Viajar</p>
                 </div>
 
                 <div class="card">
-                    <img alt=" " src="img/estudiar.svg">
+                    <img alt="" src="img/estudiar.svg">
                     <p>Estudiar</p>
                 </div>
 
                 <div class="card">
-                    <img alt=" " src="img/dispositivo.svg">
+                    <img alt="" src="img/dispositivo.svg">
                     <p>Dispositivo</p>
                 </div>
 
@@ -61,7 +61,9 @@
         </main>
 
         <div class="botones">
-            <button><a href="objetivoB2.html"><div class="CTA">Continuar</div></a></button>
+            <form action="objetivoB2.html" method="get" class="CTA">
+                <button type="submit">Continuar</button>
+            </form>
             <button><a href="home2.html"><div class="CTA-sec">Completar más tarde</div></a></button>
         </div>
 
