ajustes responsive y Declaración accesibilidad

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -29,12 +29,7 @@
                         <p class="minitext">Saldo actual</p>
                         <h3 class="money">$422.000</h3>
                     </div>
-                    <div>
-                        <select name="moneda" class="moneda">
-                            <option value="ARS">ARS</option>
-                            <option value="USD">USD</option>
-                        </select>
-                    </div>
+                
                 </div>
             </div>
         </header>
@@ -162,13 +157,14 @@
         </main>
         <nav>
             <ul>
-                <li><a href="home.html"><img alt="" src="img/home.svg">Home</a></li>
-                <li><a aria-current="page" href="estadisticas.html"><img alt="" src="img/chart.svg">Análisis</a></li>
+                <li><a href="home2.html"><img alt="" src="img/home.svg">Home</a></li>
+                <li><a aria-current="page"><img alt="" src="img/chart.svg">Análisis</a></li>
                 <li id="Agregar2"><a href=""><img alt="" src="img/plus-circle.svg"></a></li>
-                <li><img alt="" src="img/goals.svg">Objetivo</li>
-                <li><img alt="" src="img/user.svg">Perfil</li>
+                <li><a href=#><img alt="" src="img/goals.svg">Objetivo</a></li>
+                <li><a href="perfil.html"><img alt="" src="img/user.svg">Perfil</a></li>
             </ul>
         </nav>
+
 
     </div>
     <script src="script.js" type="text/javascript"></script>
