--- a/home-modal1.html
+++ b/home-modal1.html
@@ -26,8 +26,8 @@
 
             <p>Para poder ayudarte necesitamos que nos cuentes que estás necesitando.</p>
 
-            <form action="objetivo-1.html" method="get" class="CTA">
-                <button type="submit">Comencemos</button>
+            <form action="objetivo-1.html" method="get">
+                <button type="submit" class="CTA">Comencemos</button>
             </form>
         </div>        
 
