--- a/home-modal2.html
+++ b/home-modal2.html
@@ -21,8 +21,8 @@
         <img alt="" src="img/back.png">
 
         <div id="Modal2">
-            <form action="home-modal1.html" method="get" class="CTA">
-                <button type="submit">Agregar objetivo</button>
+            <form action="home-modal1.html" method="get">
+                <button type="submit" class="CTA">Agregar objetivo</button>
             </form>
 
             <div id="opciones">
