--- a/objetivo-4.html
+++ b/objetivo-4.html
@@ -33,8 +33,8 @@
         </main>
 
         <div class="Continuar2">
-            <form action="objetivo-5.html" method="get" class="CTA">
-                <button type="submit">Continuar</button>
+            <form action="objetivo-5.html" method="get">
+                <button type="submit" class="CTA">Continuar</button>
             </form>
            
         </div>
