--- a/objetivo-5.html
+++ b/objetivo-5.html
@@ -32,8 +32,8 @@
         </main>
 
         <div class="Inicio">
-            <form action="home2.html" method="get" class="CTA">
-                <button type="submit">Ir al inicio</button>
+            <form action="home2.html" method="get">
+                <button type="submit" class="CTA">Ir al inicio</button>
             </form>
                
         </div>
