--- a/objetivoB1b.html
+++ b/objetivoB1b.html
@@ -61,8 +61,8 @@
         </main>
 
         <div class="botones">
-            <form action="objetivoB2.html" method="get" class="CTA">
-                <button type="submit">Continuar</button>
+            <form action="objetivoB2.html" method="get">
+                <button type="submit" class="CTA">Continuar</button>
             </form>
             <button><a href="home2.html"><div class="CTA-sec">Completar más tarde</div></a></button>
         </div>
