--- a/objetivoB2.html
+++ b/objetivoB2.html
@@ -32,8 +32,8 @@
         </main>
 
         <div class="Continuar">
-            <form action="objetivoB3.html" method="get" class="CTA">
-                <button type="submit">Continuar</button>
+            <form action="objetivoB3.html" method="get">
+                <button type="submit" class="CTA">Continuar</button>
             </form>
         </div>
     </div>
