--- a/home.html
+++ b/home.html
@@ -51,13 +51,13 @@
         </header>
 
         <main>
-            <div class='container'>
+            <div>
                 <h3>Tus objetivos</h3>
                 <div class="objetivo-vacio">
                     <img alt="" src="img/sad.svg">
                     <p>Aún no tienes objetivos cargados</p>
-                    <form action="home-modal1.html" method="get" class="CTA">
-                        <button type="submit">Agregar objetivo</button>
+                    <form action="home-modal1.html" method="get">
+                        <button type="submit" class="CTA">Agregar objetivo</button>
                     </form>
 
                 </div>
@@ -72,8 +72,8 @@
                 <li><a aria-current="page"><img alt="" src="img/home.svg">Home</a></li>
                 <li><a href="estadisticas.html"><img alt="" src="img/chart.svg">Análisis</a></li>
                 <li id="Agregar2"><a href=""><img alt="" src="img/plus-circle.svg"></a></li>
-                <li><img alt="" src="img/goals.svg">Objetivo</li>
-                <li><img alt="" src="img/user.svg">Perfil</li>
+                <li><a href=#><img alt="" src="img/goals.svg">Objetivo</a></li>
+                <li><a href="perfil.html"><img alt="" src="img/user.svg">Perfil</a></li>
             </ul>
         </nav>
 
