--- a/home2.html
+++ b/home2.html
@@ -58,8 +58,8 @@
                     <div><img alt=" " src="img/grafico-viaje.svg"></div>    
                 </div>
                 
-                <form action="objetivoB1.html" method="get" class="CTA">
-                    <button type="submit">Agregar objetivo</button>
+                <form action="home-modal1.html" method="get">
+                    <button type="submit" class="CTA">Agregar objetivo</button>
                 </form>
 
                 <div class="chat">
@@ -68,13 +68,13 @@
             </div>
         </main>
 
-        <nav id="home2">
+        <nav>
             <ul>
                 <li><a aria-current="page"><img alt="" src="img/home.svg">Home</a></li>
                 <li><a href="estadisticas.html"><img alt="" src="img/chart.svg">Análisis</a></li>
-                <li id="Agregar2"><a href="objetivoB1.html"><img alt="" src="img/plus-circle.svg"></a></li>
-                <li><img alt="" src="img/goals.svg">Objetivo</li>
-                <li><img alt="" src="img/user.svg">Perfil</li>
+                <li id="Agregar2"><a href=""><img alt="" src="img/plus-circle.svg"></a></li>
+                <li><a href=#><img alt="" src="img/goals.svg">Objetivo</a></li>
+                <li><a href="perfil.html"><img alt="" src="img/user.svg">Perfil</a></li>
             </ul>
         </nav>
 
