--- a/home3.html
+++ b/home3.html
@@ -66,8 +66,8 @@
                     <div id="grafico-casa"><img alt="" src="img/grafico-casa.svg"></div>    
                 </div>
                 
-                <form action="home-modal1.html" method="get" class="CTA">
-                    <button type="submit">Agregar objetivo</button>
+                <form action="home-modal1.html" method="get">
+                    <button type="submit" class="CTA">Agregar objetivo</button>
                 </form>
                 
 
@@ -77,13 +77,13 @@
             </div>
         </main>
 
-        <nav id="home2">
+        <nav>
             <ul>
                 <li><a aria-current="page"><img alt="" src="img/home.svg">Home</a></li>
                 <li><a href="estadisticas.html"><img alt="" src="img/chart.svg">Análisis</a></li>
-                <li id="Agregar2"><img alt="" src="img/plus-circle.svg"></li>
-                <li><img alt="" src="img/goals.svg">Objetivo</li>
-                <li><img alt="" src="img/user.svg">Perfil</li>
+                <li id="Agregar2"><a href=""><img alt="" src="img/plus-circle.svg"></a></li>
+                <li><a href=#><img alt="" src="img/goals.svg">Objetivo</a></li>
+                <li><a href="perfil.html"><img alt="" src="img/user.svg">Perfil</a></li>
             </ul>
         </nav>
 
