--- a/objetivo-1b.html
+++ b/objetivo-1b.html
@@ -61,8 +61,8 @@
         </main>
 
         <div class="botones">
-            <form action="objetivo-2.html" method="get" class="CTA">
-                <button type="submit">Continuar</button>
+            <form action="objetivo-2.html" method="get">
+                <button type="submit" class="CTA">Continuar</button>
             </form>
             
             <a href="home.html"><div class="CTA-sec">Completar más tarde</div></a>
