--- a/objetivo-2.html
+++ b/objetivo-2.html
@@ -32,8 +32,8 @@
         </main>
 
         <div class="Continuar">
-            <form action="objetivo-3.html" method="get" class="CTA">
-                <button type="submit">Continuar</button>
+            <form action="objetivo-3.html" method="get">
+                <button type="submit"  class="CTA">Continuar</button>
             </form>
            
         </div>
