--- a/objetivoB4.html
+++ b/objetivoB4.html
@@ -33,8 +33,8 @@
         </main>
 
         <div class="Continuar2">
-            <form action="objetivoB5.html" method="get" class="CTA">
-                <button type="submit">Continuar</button>
+            <form action="objetivoB5.html" method="get">
+                <button type="submit" class="CTA">Continuar</button>
             </form>
         </div>
     </div>
