cambio nombre link

--- a/home2.html
+++ b/home2.html
@@ -51,11 +51,13 @@
                 <h3>Tus objetivos</h3>
 
                 <div class="objetivo-cargado">
-                    <div class="texto-card">
+                    <a href="estadisticas.html">
+                       <div class="texto-card">
                         <h2>Viaje</h2>
                         <p>Completaste el 17%</p>
                     </div>
-                    <div><img alt=" " src="img/grafico-viaje.svg"></div>    
+                    <div><img alt="" src="img/grafico-viaje.svg"></div>   
+                    </a>
                 </div>
                 
                 <form action="home-modal1.html" method="get">
