--- a/home3.html
+++ b/home3.html
@@ -51,19 +51,23 @@
                 <h3>Tus objetivos</h3>
 
                 <div class="objetivo-cargado">
-                    <div class="texto-card">
+                    <a href="estadisticas.html">
+                     <div class="texto-card">
                         <h2>Viaje</h2>
                         <p>Completaste el 17%</p>
                     </div>
-                    <div><img alt="" src="img/grafico-viaje.svg"></div>    
+                    <div><img alt="" src="img/grafico-viaje.svg"></div>       
+                    </a>
                 </div>
 
                 <div class="objetivo-cargado">
-                    <div class="texto-card">
+                    <a href="estadisticas.html">
+                     <div class="texto-card">
                         <h2>La Casa</h2>
                         <p>Completaste el 5%</p>
                     </div>
-                    <div id="grafico-casa"><img alt="" src="img/grafico-casa.svg"></div>    
+                    <div id="grafico-casa"><img alt="" src="img/grafico-casa.svg"></div>      
+                    </a>
                 </div>
                 
                 <form action="home-modal1.html" method="get">
