--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
             <ul>
                 <li><a aria-current="page"><img alt="" src="img/home.svg">Home</a></li>
                 <li><a href="estadisticas.html"><img alt="" src="img/chart.svg">Estadisticas</a></li>
-                <li id="Agregar2"><a href=""><img alt="" src="img/plus-circle.svg"></a></li>
+                <li id="Agregar2"><a href=#><img alt="Más opciones" src="img/plus-circle.svg"></a></li>
                 <li><a href=#><img alt="" src="img/goals.svg">Objetivo</a></li>
                 <li><a href="perfil.html"><img alt="" src="img/user.svg">Perfil</a></li>
             </ul>
