--- a/home-modal1.html
+++ b/home-modal1.html
@@ -18,7 +18,7 @@
 <body>
     <div class='appSection'>
 
-        <img alt="" src="img/back1.png">  
+        <img class="modal-img" alt="" src="img/background.svg">  
 
         <div id="Modal1">
             <h1>¿Empezamos?<br>
