--- a/objetivo-1.html
+++ b/objetivo-1.html
@@ -19,7 +19,7 @@
     <div class='appSection'>
 
         <div class="top">
-            <div><a href="home.html"><img alt="Volver" src="img/back.svg"></a></div>
+            <div><a href="objetivo-1.html"><img alt="Volver" src="img/back.svg"></a></div>
             <div><img alt="Paso 1 de 5" src="img/progress_1.png"></div>
             <h1>Definamos tu objetivo</h1>
         </div>
