--- a/objetivo-2.html
+++ b/objetivo-2.html
@@ -21,7 +21,7 @@
         <div class="top">
             <div><a href="objetivo-1.html"><img alt="Volver" src="img/back.svg"></a></div>
             <div><img alt="Paso 2 de 5" src="img/progress_2.png"></div>
-            <h1>Definamos tu objetivo</h1>
+            <h1>Contanos si tenés ahorros</h1>
         </div>
 
         <main>
@@ -33,9 +33,9 @@
 
         <div class="Continuar">
             <form action="objetivo-3.html" method="get">
-                <button type="submit"  class="CTA">Continuar</button>
+                <button type="submit" class="CTA">Continuar</button>
             </form>
-           
+
         </div>
     </div>
 </body>
