--- a/objetivo-4.html
+++ b/objetivo-4.html
@@ -21,14 +21,49 @@
         <div class="top">
             <div><a href="objetivo-3.html"><img alt="Volver" src="img/back.svg"></a></div>
             <div><img alt="Paso 4 de 5" src="img/progress_4.png"></div>
-            <h1>Definamos tu objetivo</h1>
+            <h1>Definamos el cuándo</h1>
         </div>
 
         <main>
             <div class='dinero'>
-                <p>¡Perfecto!<br> 
-                Indicanos por favor cuándo necesitas que pase.</p>
-                <input type="date" id="fecha" name="fecha">
+                <p>¡Perfecto!<br>
+                    Ingresá la fecha estimada del viaje.</p>
+                <div class="fechas">
+                    <label for="año">Años</label>
+                    <select name="año" id="año">
+                        <option value="2023">2023</option>
+                        <option value="2024">2024</option>
+                        <option value="2025">2025</option>
+                        <option value="2026">2026</option>
+                        <option value="2027">2027</option>
+                        <option value="2028">2028</option>
+                        <option value="2029">2029</option>
+                        <option value="2030">2030</option>
+                        <option value="2031">2031</option>
+                        <option value="2032">2032</option>
+                        <option value="2033">2033</option>
+                        <option value="2034">2034</option>
+                        <option value="2035">2035</option>
+                        <option value="2036">2036</option>
+                        <option value="2037">2037</option>
+                        <option value="otro">otro</option>
+                    </select>
+                    <label for="mes">Mes</label>
+                    <select name="año" id="año">
+                        <option value="Enero">Enero</option>
+                        <option value="Febrero">Febrero</option>
+                        <option value="Marzo">Marzo</option>
+                        <option value="Abril">Abril</option>
+                        <option value="Mayo">Mayo</option>
+                        <option value="Junio">Junio</option>
+                        <option value="Julio">Julio</option>
+                        <option value="Agosto">Agosto</option>
+                        <option value="Septiembre">Septiembre</option>
+                        <option value="Octubre">Octubre</option>
+                        <option value="Noviembre">Noviembre</option>
+                        <option value="Diciembre">Diciembre</option>
+                    </select>
+                </div>
             </div>
         </main>
 
@@ -36,7 +71,7 @@
             <form action="objetivo-5.html" method="get">
                 <button type="submit" class="CTA">Continuar</button>
             </form>
-           
+
         </div>
     </div>
 </body>
