--- a/perfil.html
+++ b/perfil.html
@@ -49,8 +49,8 @@
                     <h3>Declaración de accesibilidad</h3>
 
                     <input id="faq1c" name="faq1" type="radio">
-                    <label for="faq1c">This is an accessibility statement from Ecoplanning</label>
-                    <article>
+                    <label for="faq1c" lang="en">This is an accessibility statement from Ecoplanning</label>
+                    <article lang="en">
                         <p>Measures to support accessibility
                             Ecoplanning takes the following measures to ensure accessibility of Ecoplanning:
                             -Include accessibility as part of our mission statement.</p>
@@ -58,14 +58,14 @@
                         <p>The <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">Web Content Accessibility
                                 Guidelines (WCAG)</a> defines requirements for designers and
                             developers to improve accessibility for people with disabilities. It defines three levels of
-                            conformance: Level A, Level AA, and Level AAA. WEBSITE_NAME is partially conformant with
+                            conformance: Level A, Level AA, and Level AAA. Ecoplanning is partially conformant with
                             WCAG 2.1 level AA. Partially conformant means that some parts of the content do not fully
                             conform to the accessibility standard.</p>
                     </article>
 
                     <input id="faq1d" name="faq1" type="radio">
                     <label for="faq1d">Feedback</label>
-                    <article>
+                    <article lang="en">
                         <p>We welcome your feedback on the accessibility of Ecoplanning. Please let us know if you
                             encounter accessibility barriers on ecoplannning:
                         </p>
